--- a/indexTemp.html
+++ b/indexTemp.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Gun Game Adventure</title>
+        <title>game dkm clgt vkl</title>
 
         <link rel="stylesheet" href="layout.css">
         
